--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^1.4.2
+  rxdart: ^0.23.1
 
 
   # The following adds the Cupertino Icons font to your application.
